# WeGoGym-api

./: .dockerignore  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml  init-ec2.sh  pyproject.toml  redis-node.conf  requirements-dev.txt  requirements.txt  setup.cfg
app/: initial_data.py  main.py  models.py  session.py
app/ai/: client.py  config.py  models.py  prompt.py  repository.py  router.py  schema.py  service.py  utils.py
app/api/: api.py  deps.py
app/core/: config.py  conn.py  security.py
app/models/: __init__.py  audio.py  base.py  chat.py  community.py  hashtag.py  notification.py  user.py  workout_promise.py
app/schemas/: __init__.py  audio.py  auth.py  chat.py  community.py  hashtag.py  notification.py  user.py  version.py  voc.py  workout_promise.py
app/service/: chat_service.py  user_service.py
app/services/: aws_service.py  chat_service.py  community_service.py  fcm_service.py  jwt_service.py  notification_service.py  user_service.py  workout_promise_service.py
app/utils/: aws.py  common.py  ecs_log.py  generics.py  token_helper.py  user.py  voc.py
docker/api/: Dockerfile  Dockerfile.prod  startup.prod.sh  startup.sh
docker/redis/: Dockerfile
migrations/: env.py
migrations/versions/: 00c5b1580a75_add_timestamp_mixin.py  1142e7557ade_fix_sender_id_and_recipient_id_can_.py  12d91a8a9f88_add_last_active_at_field_in_user_model.py  1b756c8a6733_add_gym_info_relationship_in_workout_.py  201a1ccbbf2c_remove_created_by_in_chat_model.py  202301121938_59077bdd9407_init.py  202301281641_46e94818f02c_add_last_read_at_column_in_.py  202301291740_18db465dffe3_rename_chat_room_member_column.py  202302011606_6616a3c2ca62_add_timestampmixin.py  202302031308_6d4e04a76cbf_add_is_private_column_in_chatroom.py  202302120419_924275248d5b_fix_user_model.py  202302141657_c89fef1f823f_add_address_and_gym_column_in_user_model.py  202302161306_3d011bb64820_add_gym_address_column.py  202302171924_1d2b43b84193_fix_workout_models.py  202303071706_a849155b67a2_add_idx_and_group_chat_boolean_in_chat_.py  202303211549_1cbb1843cae1_add_fcm_token_field_in_user_model.py  202303250108_8b7e4d9f95c8_separate_noti_and_noti_workout.py  202303301513_35fc620e3894_fix_sender_type_as_workout_participant.py  202304022321_8ac29a2082ef_fix_noti_model_message_nullable.py  202304071842_5fd651c7cc19_fix_age_column_in_user_model.py  202304121701_5155c0cabc3e_add_idx_in_user_model.py  202304161614_698f4fed8640_add_user_block_relationship.py  202304171306_f4942167cc62_convert_user_block_list_to_table.py  202308081351_2b1f3e34bd7b_add_community_models.py  202308081440_0c967bd52657_refactor_db_models.py  202308091458_5146f0bd25ed_rename_is_like_to_is_liked.py  202308092059_f91ad2bca21f_set_server_default_false_is_ai_coach_.py  202308100049_3711c3442d81_fix_is_liked_field_type.py  202308100120_54e116a5e8d1_fix_foreignkey_options.py  202309062016_273be3d0ccde_check_nullables.py  202309151627_13278858b79b_add_aicoaching_model.py  27756bce6739_add_chat_related_models.py  (+33 more)
(+32 files in other folders)
