[tool.poetry]
name = "wegogym-api"
version = "0.2.0"
description = "WeGoGym's First API Server"
authors = [
  "Hyungwook Choi <chooi221@snu.ac.kr>",
  "Mingyu Kweon <alsrb582@snu.ac.kr>", 
]
maintainers = [
  "Hyungwook Choi <chooi221@snu.ac.kr>",
  "Mingyu Kweon <alsrb582@snu.ac.kr>", 
]
readme = "README.md"
repository = "https://github.com/ColaboAI/WeGoGym-api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
asyncpg = "^0.28.0"
requests = "^2.32.0"
pyjwt = "^2.8.0"
boto3 = "^1.28.5"
python-multipart = "^0.0.7"
alembic = "^1.11.1"
ujson = "^5.7.0"
pydantic-settings = "^2.0.3"
greenlet = "^2.0.2"
firebase-admin = "^6.2.0"
sqlalchemy = "^2.0.20"
coredis = "^4.16.0"
langchain = "^0.1.0"
openai = "^0.28.0"
tiktoken = "^0.5.1"


[tool.poetry.group.local.dependencies]

pytz = "^2023.3"
black = "^24.3.0"
types-ujson = "*"
isort = "*"
mypy = "*"
mypy-extensions = "*"
autoflake = "*"
flake8 = "*"
pytest = "^7.4.2"
pytest-env = "^1.0.1"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pre-commit = "^3.3.3"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
  \.git
  | \.venv
)/
'''

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = 'C,R,I,import-error'

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"